--- a/frontend/src/components/video/video.scss
+++ b/frontend/src/components/video/video.scss
@@ -1,7 +1,18 @@
 .video {
   position: relative;
   border: 1px solid black;
-  margin: 1em;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid black;
+  width: 100%;
+  height: 100%;
+
+  video {
+    width: 100%;
+    height: 100%;
+  }
 
   .audio:hover .volume-input {
     opacity: 1;
