--- a/frontend/src/components/video/video.scss
+++ b/frontend/src/components/video/video.scss
@@ -6,11 +6,10 @@
   justify-content: center;
   align-items: center;
   border: 1px solid black;
-  width: 100%;
   height: 100%;
+  justify-self: center;
 
   video {
-    width: 100%;
     height: 100%;
   }
 
