--- a/frontend/src/pages/room/room.scss
+++ b/frontend/src/pages/room/room.scss
@@ -8,40 +8,43 @@
   background-size: cover;
   overflow: hidden;
 
-  .four-users {
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  .nine-users {
-    grid-template-rows: repeat(3, 28%);
-    grid-template-columns: repeat(3, 1fr);
-  }
-
-  .one-in-room {
-    height: 100%;
-  }
-
-  .grid {
-    height: 80vh;
-    display: grid;
-    gap: 2em;
-  }
-
   .video-wrapper {
     margin: 2% 5% 0;
+    display: grid;
+    justify-content: center;
+    height: 80vh;
+    gap: .5em;
 
     .user-video {
+      border: 1px solid black;
       display: flex;
       justify-content: center;
       align-items: center;
-      border: 1px solid black;
+    }
+
+    // .video {
+    //   width: calc(height / 2.5);
+    // }
+  }
+
+  .four-users {
+    grid-template-columns: repeat(2, 46%);
+    grid-template-rows: repeat(2, 46%);
+  }
+
+  .nine-users {
+    grid-template-columns: repeat(3, 30%);
+    grid-template-rows: repeat(3, 30%);
+  }
+
+  .one-in-room {
+    display: block;
+
+    .video {
+      max-width: 100%;
+      max-height: 100%;
       width: 100%;
       height: 100%;
-
-      video {
-        height: 100%;
-      }
     }
   }
 
