--- a/frontend/src/pages/room/room.scss
+++ b/frontend/src/pages/room/room.scss
@@ -16,7 +16,6 @@
     gap: .5em;
 
     .user-video {
-      border: 1px solid black;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -34,11 +33,12 @@
   }
 
   .one-in-room {
-    display: block;
+    display: flex;
+    justify-content: center;
 
     .video {
-      max-width: 100%;
-      max-height: 100%;
+      max-width: 80%;
+      max-height: 80%;
       width: 100%;
       height: 100%;
     }
